@@ -1,3 +1,8 @@
+2020-07-22 Sergey Belyashov <sergey.belyashov@gmail.com>
+
+	* support/regression/tests/memory.c:
+	  Fix test compilation on small systems
+
 2020-07-22 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* src/z80/mappings.i:
